fixed a bug in the code where POST wasn't working correctly. Removed code from the server.js, added CSS code to the <main> tag under layout.css to make the width 90% and center aligned the text. Added another file called new-tweet.css for styling the Compose Tweet section

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,11 +27,13 @@ body {
   float: right;
 }
 
-.container {
-  display: flex;
-  width: 90%;
-  max-width: max-content;
-  margin: auto;
+main {
+background-color: #f4f1ec;
+inline-size: 90%;
+overflow-wrap: break-word;
+align-content: center;
+max-width: max-content;
+margin: auto;
 }
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
